feat: add safety site attendance
